--- a/SimpleWeather.Android/Resources/layout/activity_setup.xml
+++ b/SimpleWeather.Android/Resources/layout/activity_setup.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_setup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.thewizrd.simpleweather.SetupActivity"
-    android:background="@color/colorPrimary"
-    android:focusable="true"
-    android:focusableInTouchMode="true">
+    android:fillViewport="true">
+
+  <RelativeLayout
+      android:id="@+id/activity_setup"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      tools:context="com.thewizrd.simpleweather.SetupActivity"
+      android:background="@color/colorPrimary"
+      android:focusable="true"
+      android:focusableInTouchMode="true">
 
     <LinearLayout
         android:orientation="vertical"
@@ -23,80 +28,80 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-        <ImageView
+      <ImageView
+          android:layout_width="match_parent"
+          android:layout_height="150dp"
+          android:layout_marginTop="25dp"
+          android:src="@drawable/ic_logo"
+          android:id="@+id/main_logo" />
+
+      <include layout="@layout/location_search_bar"/>
+
+      <LinearLayout
+          android:id="@+id/api_region"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical"
+          android:layout_marginBottom="@dimen/searchview_side_margins"
+          android:layout_marginLeft="@dimen/searchview_side_margins"
+          android:layout_marginRight="@dimen/searchview_side_margins"
+          android:layout_marginTop="@dimen/searchview_side_margins">
+
+        <View
+            android:id="@+id/search_divider"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginTop="25dp"
-            android:src="@drawable/ic_logo"
-            android:id="@+id/main_logo" />
+            android:background="@color/colorPrimary"
+            android:layout_height="25dp" />
 
-        <include layout="@layout/location_search_bar"/>
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:text="@string/api_label"
+            android:maxLines="1"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:paddingBottom="8dp"
+            android:paddingStart="8dp" />
 
-        <LinearLayout
-            android:id="@+id/api_region"
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+          <Spinner
+              android:id="@+id/api_spinner"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:entries="@array/api_entries"
+              android:backgroundTint="@android:color/darker_gray"
+              android:paddingBottom="12dp"
+              android:paddingTop="12dp" />
+        </android.support.v7.widget.CardView>
+
+        <View
+            android:id="@+id/key_divider"
+            android:layout_width="match_parent"
+            android:background="@color/colorPrimary"
+            android:layout_height="10dp" />
+
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="@dimen/searchview_side_margins"
-            android:layout_marginLeft="@dimen/searchview_side_margins"
-            android:layout_marginRight="@dimen/searchview_side_margins"
-            android:layout_marginTop="@dimen/searchview_side_margins">
+            android:id="@+id/key_entry_box">
 
-            <View
-                android:id="@+id/search_divider"
-                android:layout_width="match_parent"
-                android:background="@color/colorPrimary"
-                android:layout_height="25dp" />
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:text="@string/api_label"
-                android:maxLines="1"
-                android:textColor="@android:color/white"
-                android:textSize="12sp"
-                android:layout_height="wrap_content"
-                android:textAllCaps="false"
-                android:paddingBottom="8dp"
-                android:paddingStart="8dp" />
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <Spinner
-                    android:id="@+id/api_spinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:entries="@array/api_entries"
-                    android:backgroundTint="@android:color/darker_gray"
-                    android:paddingBottom="12dp"
-                    android:paddingTop="12dp" />
-            </android.support.v7.widget.CardView>
-
-            <View
-                android:id="@+id/key_divider"
-                android:layout_width="match_parent"
-                android:background="@color/colorPrimary"
-                android:layout_height="10dp" />
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/key_entry_box">
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/key_entry"
-                    android:hint="@string/key_hint"
-                    android:textSize="16sp"
-                    android:paddingStart="8dp"
-                    android:background="@null"
-                    android:paddingTop="12dp"
-                    android:paddingBottom="12dp" />
-            </android.support.v7.widget.CardView>
-        </LinearLayout>
+          <EditText
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/key_entry"
+              android:hint="@string/key_hint"
+              android:textSize="16sp"
+              android:paddingStart="8dp"
+              android:background="@null"
+              android:paddingTop="12dp"
+              android:paddingBottom="12dp" />
+        </android.support.v7.widget.CardView>
+      </LinearLayout>
     </LinearLayout>
 
     <RelativeLayout
@@ -104,4 +109,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true" />
-</RelativeLayout>
+  </RelativeLayout>
+</ScrollView>
