--- a/SimpleWeather.Android/Resources/layout/weather_forecast_panel.xml
+++ b/SimpleWeather.Android/Resources/layout/weather_forecast_panel.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_height="wrap_content"
+    android:layout_height="175dp"
     android:padding="4dp"
-    android:layout_width="wrap_content"
-    android:minWidth="100dp">
+    android:layout_width="130dp">
 
     <TextView
         android:id="@+id/forecast_date"
@@ -17,21 +17,29 @@
         android:textColor="@android:color/white"
         android:textSize="14sp" />
 
-    <SimpleWeather.Droid.Controls.WeatherIcon
-        android:id="@+id/forecast_icon"
+    <me.grantland.widget.AutofitLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="@string/wi_wu_sunny"
-        android:textSize="36sp"
-        android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:paddingLeft="8dp" />
+        android:layout_height="0dp"
+        android:layout_weight="2">
 
-    <TextView
+        <SimpleWeather.Droid.Controls.WeatherIcon
+            android:id="@+id/forecast_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="@string/wi_wu_sunny"
+            android:textSize="44sp"
+            android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:paddingLeft="8dp" />
+    </me.grantland.widget.AutofitLayout>
+
+    <me.grantland.widget.AutofitTextView
         android:id="@+id/forecast_condition"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_gravity="bottom"
         tools:text="Sunny"
         android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
         android:padding="4dp"
