--- a/SimpleWeather.UWP/WeatherNow.xaml
+++ b/SimpleWeather.UWP/WeatherNow.xaml
@@ -7,7 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance Type=controls:WeatherNowView, IsDesignTimeCreatable=True}">
+    DataContext="{x:Bind WeatherView}">
     <Page.Resources>
         <TransitionCollection x:Name="TextTransitions">
             <EntranceThemeTransition />
@@ -154,7 +154,7 @@
         </CommandBar>
 
         <ScrollViewer x:Name="MainViewer" VerticalScrollMode="Auto" Grid.Row="1" Background="{Binding Background}">
-            <Grid x:Name="MainGrid" Visibility="Visible">
+            <Grid x:Name="MainGrid">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -313,9 +313,9 @@
                 </Grid>
             </Grid>
         </ScrollViewer>
-        <Grid Grid.Row="1" x:Name="LoadingGrid">
-            <ProgressRing x:Name="LoadingRing" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="50" Foreground="White" IsActive="True"/>
-        </Grid>
+        <ProgressRing x:Name="LoadingRing" Grid.Row="1"
+                      HorizontalAlignment="Center" VerticalAlignment="Center" 
+                      Height="50" Width="50" Foreground="White" IsActive="True"/>
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
                 <VisualState x:Name="Mobile">
