--- a/SimpleWeather.Android/Resources/layout/activity_setup.xml
+++ b/SimpleWeather.Android/Resources/layout/activity_setup.xml
@@ -1,113 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_setup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:background="@color/colorPrimary"
+    android:fillViewport="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    tools:context="com.thewizrd.simpleweather.SetupActivity">
 
-  <RelativeLayout
-      android:id="@+id/activity_setup"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      tools:context="com.thewizrd.simpleweather.SetupActivity"
-      android:background="@color/colorPrimary"
-      android:focusable="true"
-      android:focusableInTouchMode="true">
-
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/linearLayout"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:layout_height="match_parent">
 
-      <ImageView
-          android:layout_width="match_parent"
-          android:layout_height="150dp"
-          android:layout_marginTop="25dp"
-          android:src="@drawable/ic_logo"
-          android:id="@+id/main_logo" />
-
-      <include layout="@layout/location_search_bar"/>
-
-      <LinearLayout
-          android:id="@+id/api_region"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="vertical"
-          android:layout_marginBottom="@dimen/searchview_side_margins"
-          android:layout_marginLeft="@dimen/searchview_side_margins"
-          android:layout_marginRight="@dimen/searchview_side_margins"
-          android:layout_marginTop="@dimen/searchview_side_margins">
-
-        <View
-            android:id="@+id/search_divider"
-            android:layout_width="match_parent"
-            android:background="@color/colorPrimary"
-            android:layout_height="25dp" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:text="@string/api_label"
-            android:maxLines="1"
-            android:textColor="@android:color/white"
-            android:textSize="12sp"
-            android:layout_height="wrap_content"
-            android:textAllCaps="false"
-            android:paddingBottom="8dp"
-            android:paddingStart="8dp" />
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-          <Spinner
-              android:id="@+id/api_spinner"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:entries="@array/api_entries"
-              android:backgroundTint="@android:color/darker_gray"
-              android:paddingBottom="12dp"
-              android:paddingTop="12dp" />
-        </android.support.v7.widget.CardView>
-
-        <View
-            android:id="@+id/key_divider"
-            android:layout_width="match_parent"
-            android:background="@color/colorPrimary"
-            android:layout_height="10dp" />
-
-        <android.support.v7.widget.CardView
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/key_entry_box">
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
 
-          <EditText
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:id="@+id/key_entry"
-              android:hint="@string/key_hint"
-              android:textSize="16sp"
-              android:paddingStart="8dp"
-              android:background="@null"
-              android:paddingTop="12dp"
-              android:paddingBottom="12dp" />
-        </android.support.v7.widget.CardView>
-      </LinearLayout>
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/main_logo"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginTop="25dp"
+                android:src="@drawable/ic_logo" />
+
+            <include layout="@layout/location_search_bar" />
+
+            <LinearLayout
+                android:id="@+id/api_region"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/searchview_side_margins"
+                android:layout_marginLeft="@dimen/searchview_side_margins"
+                android:layout_marginRight="@dimen/searchview_side_margins"
+                android:layout_marginTop="@dimen/searchview_side_margins"
+                android:orientation="vertical">
+
+                <View
+                    android:id="@+id/search_divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+                    android:background="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:paddingBottom="8dp"
+                    android:paddingStart="8dp"
+                    android:text="@string/api_label"
+                    android:textAllCaps="false"
+                    android:textColor="@android:color/white"
+                    android:textSize="12sp" />
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <Spinner
+                        android:id="@+id/api_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@android:color/darker_gray"
+                        android:entries="@array/api_entries"
+                        android:paddingBottom="12dp"
+                        android:paddingTop="12dp" />
+                </android.support.v7.widget.CardView>
+
+                <View
+                    android:id="@+id/key_divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp"
+                    android:background="@color/colorPrimary" />
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/key_entry_box"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/key_entry"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:hint="@string/key_hint"
+                        android:paddingBottom="12dp"
+                        android:paddingStart="8dp"
+                        android:paddingTop="12dp"
+                        android:textSize="16sp" />
+                </android.support.v7.widget.CardView>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <RelativeLayout
         android:id="@+id/search_fragment_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true" />
-  </RelativeLayout>
-</ScrollView>
+</RelativeLayout>
